--- a/app/index.html
+++ b/app/index.html
@@ -401,6 +401,8 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/metisMenu/dist/metisMenu.js"></script>
+    <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -410,6 +412,13 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/auth.js"></script>
+        <script src="scripts/controllers/yami.js"></script>
+        <script src="scripts/services/users.js"></script>
+        <script src="scripts/services/upper.js"></script>
+        <script src="scripts/services/utils.js"></script>
+        <script src="scripts/services/punches.js"></script>
+        <script src="scripts/filters/momentfilter.js"></script>
+        <script src="scripts/services/timeutils.js"></script>
         <!-- endbuild -->
 
     <!-- Custom Theme JavaScript -->
